# bk-iam-saas

./: .dockerignore  .gitignore  Dockerfile  License.txt  build.sh  readme.md  readme_en.md  release.md
saas/: .gitignore  .importlinter  .pre-commit-config.yaml  Makefile  audit.txt  gunicorn_hooks.py  manage.py  pyproject.toml  release.md  requirements.txt  requirements_dev.txt  settings.py  urls.py  wsgi.py
saas/backend/account/: __init__.py  apps.py  backends.py  middlewares.py  models.py  permissions.py  role_auth.py  serializers.py  signal_receivers.py  urls.py  views.py
saas/backend/api/: authentication.py  constants.py  mixins.py  permissions.py  urls.py  urls_v1.py  urls_v2.py
saas/backend/audit/: __init__.py  apps.py  audit.py  constants.py  detail.py  filters.py  models.py  routers.py  serializers.py  signals.py  tasks.py  urls.py  views.py
saas/backend/biz/: action.py  action_group.py  aggregate_action.py  application.py  application_process.py  approval.py  constants.py  group.py  handover.py  helper.py  instance_selection.py  model_event.py  open.py  organization.py  permission_audit.py  permission_manage.py  permission_resource_subjects.py  policy.py  policy_tag.py  related_policy.py  resource.py  resource_creator_action.py  resource_type.py  role.py  subject.py  subject_template.py  system.py  template.py  utils.py  validation.py
saas/backend/common/: authentication.py  base.py  cache.py  celery_signal_receivers.py  constants.py  debug.py  error_codes.py  exception_handler.py  filters.py  i18n.py  local.py  lock.py  middlewares.py  models.py  pagination.py  redis.py  renderers.py  serializers.py  swagger.py  time.py  views.py  vue.py
saas/backend/component/: apigw.py  bcs.py  bkbot.py  cmdb.py  constants.py  engine.py  esb.py  http.py  iam.py  itsm.py  login.py  resource_provider.py  sops.py  usermgr.py  util.py
saas/backend/debug/: __init__.py  apps.py  urls.py  views.py
saas/backend/healthz/: urls.py  views.py
saas/backend/iam/: __init__.py  apps.py  dispatchers.py  providers.py  urls.py
saas/backend/long_task/: constants.py  models.py  task.py  tasks.py
saas/backend/metrics/: __init__.py  urls.py  views.py
saas/backend/mixins/: __init__.py  biz.py  service.py  tenant.py  trans.py
saas/backend/publisher/: constants.py  shortcut.py  tasks.py
saas/backend/service/: action.py  action_group.py  aggregate_action.py  application.py  approval.py  constants.py  engine.py  group.py  group_saas_attribute.py  instance_selection.py  mgmt.py  model_event.py  resource.py  resource_creator_action.py  resource_type.py  role.py  subject.py  subject_template.py  system.py  template.py
saas/backend/tracing/: __init__.py  apps.py  instrumentor.py  otel.py  sentry.py  setup.py
saas/backend/trans/: application.py  constants.py  group.py  open.py  open_application.py  open_authorization.py  open_management.py  policy.py  role.py
saas/backend/util/: basic.py  cache.py  enum.py  json.py  lock.py  model.py  serializer.py  serializer_patch.py  time.py  tree.py  url.py  uuid.py
saas/backend/version_log/: constants.py  serializers.py  urls.py  utils.py  views.py
saas/blueapps/: __init__.py
saas/blueapps/account/: __init__.py  admin.py  apps.py  backends.py  conf.py  decorators.py  forms.py  middlewares.py  models.py  urls.py  views.py
saas/blueapps/conf/: __init__.py  database.py  default_settings.py  environ.py  log.py
saas/blueapps/core/: wsgi.py
saas/blueapps/middleware/: request_provider.py
saas/blueapps/patch/: log.py  settings_open_saas.py  settings_paas_services.py
saas/blueapps/template/: context_processors.py
saas/blueapps/utils/: __init__.py  esbclient.py  logger.py  request_provider.py  unique.py
saas/blueking/: __init__.py
saas/blueking/component/: base.py  client.py  collections.py  compat.py  conf.py  exceptions.py  shortcuts.py  utils.py
saas/blueking/tests/: test_client.py  test_shortcuts.py  test_utils.py
saas/config/: __init__.py  ce.py  celery_app.py  default.py  dev.py  prod.py  utils.py  v2.py  v3.py
saas/profiles/: 0.067s _api_v1_accounts_user_ 1744859541.html  0.195s _api_v1_accounts_user_ 1744859599.html  0.199s _api_v1_accounts_user_ 1744859598.html  0.199s _api_v1_accounts_user_roles_ 1744859599.html  0.216s _api_v1_users_profile_newbie_ 1744859597.html  0.248s _api_v1_accounts_user_roles_ 1744859598.html  0.273s _api_v1_accounts_user_ 1744859599.html  0.325s _api_v1_version_log_ 1744859598.html  0.344s _api_v1_accounts_user_ 1744859597.html  0.361s _api_v1_roles_super_manager_members_ 1744859600.html  0.417s _api_v1_users_profile_newbie_ 1744859600.html  0.438s _api_v1_roles_grade_managers_?with_super=true&offset=0&limit=100&cancelWhenRouteChange=false&cancelP 1744859598.html  0.669s _api_v1_roles_grade_managers_?with_super=true&offset=0&limit=20&cancelWhenRouteChange=false 1744859600.html
saas/resources/: app.yml  bkpkg-bkiam_saas.yaml
saas/resources/apigateway/: bk_apigw_resources_bk-iam.yaml  definition.yaml
saas/resources/iam/: 01_initial.json
saas/resources/templates/: group_expired_mail.html  group_expired_rtx.tpl  user_expired_mail.html  user_expired_rtx.tpl
saas/resources/version_log/: V1.1.0_2020-06-19.md  V1.1.0_2020-06-19_en.md  V1.1.1_2020-06-22.md  V1.1.1_2020-06-22_en.md  V1.4.10_2021-06-08.md  V1.4.10_2021-06-08_en.md  V1.4.11_2021-06-15.md  V1.4.11_2021-06-15_en.md  V1.4.12_2021-06-17.md  V1.4.12_2021-06-17_en.md  V1.4.19_2021-07-15.md  V1.4.19_2021-07-15_en.md  V1.4.20_2021-07-19.md  V1.4.20_2021-07-19_en.md  V1.4.21_2021-07-20.md  V1.4.21_2021-07-20_en.md  V1.4.22_2021-07-20.md  V1.4.22_2021-07-20_en.md  V1.4.23_2021-07-22.md  V1.4.23_2021-07-22_en.md  V1.4.24_2021-08-02.md  V1.4.24_2021-08-02_en.md  V1.4.25_2021-08-02.md  V1.4.25_2021-08-02_en.md  V1.4.26_2021-08-05.md  V1.4.26_2021-08-05_en.md  V1.4.27_2021-08-10.md  V1.4.27_2021-08-10_en.md  V1.4.28_2021-08-11.md  V1.4.28_2021-08-11_en.md  V1.4.29_2021-08-13.md  V1.4.29_2021-08-13_en.md  V1.4.30_2021-08-26.md  V1.4.30_2021-08-26_en.md  V1.5.0_2021-08-09.md  (+262 more)
saas/tests/: .env  conftest.py  unittest_settings.py
(+1523 files in other folders)
