[tool.black]
line-length = 119
target-version = ["py311"]
exclude = "(\\.mypy_cache|\\.git|migrations)"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 119
skip = [".mypy_cache", ".git", "*/migrations"]

[tool.flake8]
ignore = ["C901", "E203", "W503", "B010", "B009", "B031"]
max-line-length = 119
max-complexity = 12
format = "pylint"
show_source = true
statistics = true
count = true
exclude = [
    "*migrations*",
    "*.pyc",
    ".git",
    "__pycache__",
    "node_modules/*",
    "*/templates_module*",
    "*/bin/*",
    "*/settings/*",
    "config",
    "tests/unittest_settings.py"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B110", "B311", "B303"]

[tool.mypy]
files = ["."]
python_version = 3.11
ignore_missing_imports = true
strict_optional = true
pretty = true
show_error_codes = true
exclude = "(^.*/config/.*|.*/settings\\.py|.*/tests/unittest_settings\\.py|.*/backend/tracing/.*)"

[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
    "*.config.*",
    "*.tests.unittest_settings",
    "*.backend.tracing.*",
    "*.settings"]
ignore_errors = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.unittest_settings"
addopts = "--disable-pytest-warnings --reuse-db --nomigrations -s"
python_files = "*_tests.py"
testpaths = ["tests"]

[tool.poetry]
name = "bk_iam_saas"
description = "IAM（Identity and Access Management） is centralized authority management services provided by Blueking, which is used for centralized access of various Platforms and SaaS within the BlueKing System, and provides access control for resources that are refined to specific resource instance."
license = "MIT License"
authors = ["TencentBlueKing <contactus_bk@tencent.com>"]
version = "0.0.0"

[tool.poetry.dependencies]
python = "3.11.11"
aenum = "2.2.6"
aiocontextvars = "0.2.2"
amqp = "5.1.1"
apigw-manager = "3.0.2"
asgiref = "3.8.0"
async-timeout = "4.0.2"
backoff = "1.10.0"
billiard = "3.6.4.0"
bk-audit = "1.0.1rc0"
bk-crypto-python-sdk = "2.0.0"
bk-iam = "1.3.6"
bk-notice-sdk = "1.3.2"
bkapi-bk-apigateway = "1.0.11"
bkapi-client-core = "1.2.0"
blue-krill = "2.0.7"
cached-property = "2.0.1"
cachetools = "5.3.3"
celery = "5.2.7"
certifi = "2024.12.14"
cffi = "1.16.0"
charset-normalizer = "3.4.1"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.2.0"
click = "8.1.6"
concurrent-log-handler = "0.9.25"
contextvars = "2.4"
coreapi = "2.3.3"
coreschema = "0.0.4"
cryptography = "42.0.5"
curlify = "2.2.1"
dacite = "1.8.1"
# dataclasses = "0.7"
decorator = "5.0.9"
deprecated = "1.2.15"
django-celery-beat = "2.6.0"
django-cors-headers = "3.4.0"
django-environ = "0.8.1"
django-filter = "2.4.0"
django-js-asset = "1.2.2"
django-mptt = "0.15.0"
django-prometheus = "2.2.0"
django-redis = "5.2.0"
django-timezone-field = "6.1.0"
django = "4.2.19"
djangorestframework = "3.15.1"
dogpile.cache = "0.9.2"
drf-yasg = "1.21.4"
et-xmlfile = "1.1.0"
future = "1.0.0"
gevent = "24.2.1"
gitdb = "4.0.9"
gitpython = "3.1.42"
googleapis-common-protos = "1.56.1"
greenlet = "3.0.2"
grpcio = "1.69.0"
gunicorn = "20.1.0"
httplib2 = "0.22.0"
idna = "3.10"
immutables = "0.20"
importlib-metadata = "8.5.0"
inflection = "0.5.1"
itypes = "1.2.0"
jinja2 = "3.1.3"
kombu = "5.3.7"
markupsafe = "2.1.1"
openpyxl = "3.0.9"
opentelemetry-api = "1.29.0"
opentelemetry-exporter-jaeger-proto-grpc = "1.20.0"
opentelemetry-exporter-jaeger-thrift = "1.20.0"
opentelemetry-exporter-jaeger = "1.20.0"
opentelemetry-exporter-otlp-proto-grpc = "1.29.0"
opentelemetry-exporter-otlp-proto-http = "1.29.0"
opentelemetry-exporter-otlp = "1.29.0"
opentelemetry-exporter-otlp-proto-common = "1.29.0"
opentelemetry-instrumentation-celery = "0.50b0"
opentelemetry-instrumentation-dbapi = "0.50b0"
opentelemetry-instrumentation-django = "0.50b0"
opentelemetry-instrumentation-logging = "0.50b0"
opentelemetry-instrumentation-redis = "0.50b0"
opentelemetry-instrumentation-requests = "0.50b0"
opentelemetry-instrumentation-wsgi = "0.50b0"
opentelemetry-instrumentation = "0.50b0"
opentelemetry-proto = "1.29.0"
opentelemetry-sdk = "1.29.0"
opentelemetry-semantic-conventions = "0.50b0"
opentelemetry-util-http = "0.50b0"
packaging = "24.2"
portalocker = "2.7.0"
prometheus-client = "0.13.0"
prompt-toolkit = "3.0.36"
protobuf = "5.29.3"
pycparser = "2.20"
pycryptodomex = "3.20.0"
pydantic = "1.9.2"
pyinstrument-cext = "0.2.4"
pyinstrument = "3.1.3"
pyjwt = "2.8.0"
pymysql = "1.1.1"
pyparsing = "2.4.7"
python-crontab = "2.6.0"
python-dateutil = "2.8.2"
python-editor = "1.0.4"
python-json-logger = "0.1.7"
pytz = "2022.6"
pywin32 = "306"
pyyaml = "6.0.2"
redis = "5.0.3"
requests = "2.32.3"
ruamel.yaml.clib = "0.2.6"
ruamel.yaml = "0.17.10"
sentry-sdk = "1.43.0"
six = "1.17.0"
smmap = "5.0.0"
sqlparse = "0.4.4"
thrift = "0.21.0"
toml = "0.10.1"
tongsuopy-crayon = "1.0.2b6"
typing-extensions = "4.12.2"
uritemplate = "3.0.1"
urllib3 = "1.26.20"
vine = "5.0.0"
watchdog = "1.0.2"
wcwidth = "0.2.5"
werkzeug = "2.1.1"
whitenoise = "5.1.0"
wrapt = "1.17.2"
zipp = "3.21.0"
zope.event = "4.5.0"
zope.interface = "5.4.0"


[tool.poetry.dev-dependencies]
tomli= "2.2.1"
toml = "0.10.2"
pyproject-flake8 = "7.0.0"
flake8-comprehensions = "3.16.0"
pytest = "8.3.5"
pytest-django = "4.11.1"
django-dynamic-fixture = "4.0.1"
converge = "1.1.1"
mock = "5.2.0"
black = "25.1.0"
mypy = "1.15.0"
types-requests = "2.32.0.20250328"
types-pytz = "2025.2.0.20250326"
types-redis = "4.6.0.20241004"
types-six = "1.17.0.20250403"
types-mock = "5.2.0.20250306"
isort = "6.0.1"
pytest-cov = "6.1.1"
flake8-bugbear = "24.12.12"
bandit = "1.8.3"
import-linter = "2.3"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
